--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -11,6 +11,8 @@
   "include": [
     "**/*.ts",
     "**/*.tsx",
+    "frontend/.expo/types/**/*.ts",
+    "frontend/expo-env.d.ts",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
   ]
