--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,15 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-firebase/app": "^21.7.1",
+    "@react-native-firebase/auth": "^21.7.1",
     "@react-navigation/native": "^6.0.2",
     "eas": "^0.1.0",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
-    "expo-dev-client": "~4.0.26",
+    "expo-dev-client": "~4.0.29",
+    "expo-firebase-recaptcha": "^2.3.1",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
@@ -41,7 +45,9 @@
     "react-native-screens": "3.31.1",
     "react-native-uuid": "^2.0.3",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "react-native-webview": "13.8.6",
+    "undefined": "firebase/auth/react-native"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
