--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,13 +47,15 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
     "react-native-webview": "13.8.6",
-    "undefined": "firebase/auth/react-native"
+    "undefined": "firebase/auth/react-native",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
+    "@types/validator": "^13.12.2",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
