--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "expo-dev-client": "~4.0.29",
     "expo-firebase-recaptcha": "^2.3.1",
     "expo-font": "~12.0.9",
+    "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
@@ -37,8 +38,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-drawer-layout": "^4.1.1",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
