--- a/frontend/package.json
+++ b/frontend/package.json
@@ -61,6 +61,8 @@
     "@types/validator": "^13.12.2",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
+    "prettier": "3.5.1",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "^3.3.2",
     "typescript": "~5.3.3"
